--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -151,6 +151,30 @@ p {
             }
         }
     }
+    .skillset {
+        .item {
+            margin-bottom: 3px;
+            overflow: hidden;
+        }
+        .skill-title{
+            color: $text-color;
+        }
+        .level-title {
+            font-family: 'Roboto', sans-serif;
+            font-size: 14px;
+            margin-top: 0;
+        }
+        .level-bar {
+            height: 5px;
+            background: lighten($theme-color, 15%);
+            
+        }
+        .level-bar-inner {
+            height: 5px;
+            background: $smoky-white;
+        }
+    }
+    
 }
 
 .main-wrapper {
@@ -166,6 +190,11 @@ p {
         margin-top: 0;
         margin-bottom: 20px;
     }
+    .switch-lan {
+        font-size: 15px;
+        position: absolute;
+        right: 0;
+    }
     .section {
         margin-bottom: 60px;
     }
@@ -173,6 +202,10 @@ p {
     .experiences-section, .educations-section {
         .item {
             margin-bottom: 30px;
+            .description {
+                margin-bottom: 10px;
+                color: $text-grey;
+            }
         }
     }
     .upper-row {
@@ -185,7 +218,7 @@ p {
         font-size: 16px;
         margin-top: 0;
         margin-bottom: 0;
-        font-weight: 500;
+        font-weight: 800;
     }
     .time {
         position: absolute;
@@ -193,14 +226,17 @@ p {
         top: 0;
         color: $text-grey;
     }
-    .company, .university {
+    .university {
         margin-bottom: 10px;
         color: $text-grey;
     }
-
+    .company {
+        margin-bottom: 10px;
+        text-decoration:underline;
+    }
     .project-title {
-        font-size: 16px;
-        font-weight: 400;
+        font-size: 15px;
+        font-weight: 550;
         margin-top: 0;
         margin-bottom: 5px;
 	color: darken($theme-color, 15%);
@@ -222,7 +258,7 @@ p {
     }
     .publication-authors {
         font-style: italic;
-        color: $text-grey;
+        font-weight: 600;
         margin-bottom: 1px;
     }
     .publications-section {
@@ -235,26 +271,6 @@ p {
     }
 }
 
-
-.skillset {
-    .item {
-        margin-bottom: 15px;
-        overflow: hidden;
-    }
-    .level-title {
-        font-size: 14px;
-        margin-top: 0;
-        margin-bottom: 12px;
-    }
-    .level-bar {
-        height: 12px;
-        background: $smoky-white;
-    }
-    .level-bar-inner {
-        height: 12px;
-        background: lighten($theme-color, 15%);
-    }
-}
 
 
 
